--- a/_config.pug
+++ b/_config.pug
@@ -3,6 +3,7 @@
   revision     = '33'
 
   live_url     = 'https://techie-joe.github.io/dove'
+  edit_url     = 'https://github.com/techie-joe/dove'
 
   site_url     = '/dove'
   home_url     = '/dove'
