--- a/_includes/preview.html
+++ b/_includes/preview.html
@@ -10,6 +10,10 @@
   
 <p class="indent text-justify text-grey"><strong>You'll notice some gibberish text in this demo.</strong> It's simply placeholder content, added to help you visualize how the layout, spacing, and typography will appear once real content is in place. The text itself doesn't carry any meaning, it's just there to fill the empty areas and make the overall design feel balanced and complete. Each line and section tells a “different story”, though none of it is meant to be understood literally. It's more of a creative illusion, a way to showcase how color, contrast, and structure come together to create a theme. It honors the “look and feel”, a metaphor for how design can shift and vary in perspective. That's the beauty of visual design. Every layout tells its own silent story, even when the words themselves mean nothing at all.</p>
 
+<blockquote>
+  <p>Have a look at <a href="./legacy.html">the legacy</a> for the classic demo page.</p>
+</blockquote>
+
 <hr />
 
 <!-- Comment blocks will not appear on the screen. -->
@@ -60,10 +64,6 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 <a href="#" onclick="event.preventDefault();" class="button">Button Link</a>
 <span class="text-gray">&bull;</b>
 <a href="#" onclick="event.preventDefault();theme.change()" class="button text-secondary" title="Change Theme (Alt+T)">Change Theme</a></p>
-
-<p>
-<a href="#" onclick="event.preventDefault();" class="button bg-blue text-white ph pv_5">Big Button</a>
-</p>
 
 <h2>Footnote links</h2>
 
