--- a/_pugs/mallet/_html.pug
+++ b/_pugs/mallet/_html.pug
@@ -1,9 +1,8 @@
 extends /_pugs/_layouts/mallet
 block append vars
   include /_pugs/_nav
-  -
-    path  = ['mallet',path].join('/')
-    title = [title,'Mallet'].join(' | ')
+block append update_vars
+  - path  = ['mallet',path].join('/')
 block nav
   +nav_('mallet')
 block footer
