--- a/_pugs/_layouts/core.pug
+++ b/_pugs/_layouts/core.pug
@@ -5,11 +5,12 @@ block vars
     htmlClass = ['_core_layout']
     bodyClass = []
     mainClass = []
+block update_vars
 block html
   doctype html
   html(lang=lang||'en-US' class=htmlClass.join(' '))
-    |<!-- page.path   : !{path} -->
-    |<!-- page.layout : pugs/!{layout} -->
+    |<!-- path   : !{path} -->
+    |<!-- layout : pugs/!{layout} -->
     head
       meta(charset=charset||'utf-8')/
       |<!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -26,15 +27,21 @@ block html
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
       ._views: ._view
-        header._header: ._layout: block header
-          //- code // header
-          +logo
-        nav._nav: ._layout._960: block nav
-          code // nav
-        main._main: article._article._layout._960: block content
-          code // content for : !{title}
-        footer._footer: ._layout._960: block footer
-          code // footer
+        header._header: ._layout
+          block header
+            //- code // header
+            +logo
+        nav._nav: ._layout._960
+          block nav
+            p: code // nav
+        main._main: article._article._layout._960
+          block content
+            h1 !{title}
+            p: code // content for : !{title}
+        footer._footer: ._layout._960
+          block footer
+            p: code // footer
+          p This site is open source. #[+edit_link(path)].
       +theme_switch
       block custom_body
         +custom_body
