--- a/_pugs/_layouts/nova.pug
+++ b/_pugs/_layouts/nova.pug
@@ -5,6 +5,7 @@ block vars
     htmlClass = ['_nova_layout']
     bodyClass = []
     mainClass = []
+block update_vars
 block html
   doctype html
   html(lang=lang||'en-US' class=htmlClass.join(' '))
@@ -28,16 +29,21 @@ block html
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
       ._views: ._view
-        header._header: ._layout: block header
-          //- code // header
-          .flex
-            .fill: +logo
-            .fit: +theme_switch
-        nav._nav: ._layout._960: block nav
-          code // nav
-        main._main: article._article._layout._960: block content
-          code // content for : !{title}
-        footer._footer: ._layout._960: block footer
-          code // footer
+        header._header: ._layoutx
+          block header
+            //- code // header
+            .flex
+              .fill: +logo
+              .fit: +theme_switch
+        nav._nav: ._layoutx._960
+          block nav
+            p: code // nav
+        main._main: article._article._layoutx._960
+          block content
+            p: code // content for : !{title}
+        footer._footer: ._layoutx._960
+          block footer
+            p: code // footer
+          p This site is open source. #[+edit_link(path)].
       block custom_body
         +custom_body
