--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -34,6 +34,8 @@ details { margin-bottom: 16px }
   }
 }
 
+.itext, .isvg { line-height:.7 }
+
 .footnote,
 .reversefootnote { text-decoration:none !important }
 
