--- a/_pugs/_nav.pug
+++ b/_pugs/_nav.pug
@@ -3,8 +3,10 @@ mixin nav_(sub)
   b !{capitalize(sub)}
   +l
   +isvg(svgi.angle)
-  +_a(sub_url)| Home
   +_a(sub_url+"preview.html")| Preview
   +_a(sub_url+"legacy.html")| Legacy
+  +l
+  +itext|&bull;
+  +_a(sub_url)| Home
   +_a(sub_url+"page.html")| Page
   +_a(sub_url+"404.html")| 404
