--- a/_pugs/_layouts/core.pug
+++ b/_pugs/_layouts/core.pug
@@ -36,7 +36,7 @@ block html
             p: code // nav
         main._main: article._article._layout._960
           block content
-            h1 !{title}
+            h1._page_title !{title}
             p: code // content for : !{title}
         footer._footer: ._layout._960
           block footer
