--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -16,3 +16,4 @@
   a { text-decoration:none !important; color:inherit }
   a:hover { color:$text-blue }
 }
+._page_title { margin-block-start:1rem }
