--- a/_pugs/_layouts/prime.pug
+++ b/_pugs/_layouts/prime.pug
@@ -33,7 +33,7 @@ block html
           //- p: code // header
           h1: a(href=home_url) #{site_title}
         block content
-          h1._page_title !{title}
+          h1 !{title}
           p: code // content for : !{title}
         .footer.border-top.border-gray-light.mt-5.pt-3.text-right.text-gray
           block footer
