--- a/_includes/preview.html
+++ b/_includes/preview.html
@@ -19,7 +19,7 @@
 <!-- Comment blocks will not appear on the screen. -->
 <!-- {% comment %} Liquid comments will not be rendered. {% endcomment %} -->
 
-<p>There's a <strong>horizontal rule</strong> above this sentence, followed by a <strong>comment block</strong>. Comment blocks will not appear on the screen, and Liquid comments will not be rendered.</p>
+<p class="text-justify">There's a <strong>horizontal rule</strong> above this sentence, followed by a <strong>comment block</strong>. Comment blocks will not appear on the screen, and Liquid comments will not be rendered.</p>
 
 <h2>Styling texts</h2>
 
