--- a/_pugs/prime/404.html.pug
+++ b/_pugs/prime/404.html.pug
@@ -11,7 +11,7 @@ block content
       h2 Oops! Nothing found
       p #{ description }
   div(style="margin-top:3rem")
-  hr/
+  +thin_hr
   p
     +back_button.button.text-secondary
     +l
