--- a/_pugs/prime/legacy.html.pug
+++ b/_pugs/prime/legacy.html.pug
@@ -3,5 +3,8 @@ block append vars
   -
     path   = 'legacy.html'
     title  = `Legacy`
+block nav
+  style.
+    ._nav { display:none !important }
 block content
   include /_includes/legacy.html
