--- a/_pugs/_layouts/core.pug
+++ b/_pugs/_layouts/core.pug
@@ -26,22 +26,25 @@ block html
         +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
-      ._views: ._view
-        header._header: ._layout
-          block header
-            //- code // header
-            +logo
-        nav._nav: ._layout._960
-          block nav
-            p: code // nav
-        main._main: article._article._layout._960
-          block content
-            h1 !{title}
-            p: code // content for : !{title}
-        footer._footer: ._layout._960
-          block footer
-            p: code // footer
-          p This site is open source. #[+edit_link(path)].
-      +theme_switch
-      block custom_body
-        +custom_body
+      ._views
+        ._view: ._layout
+          header._header: ._layout
+            block header
+              //- code // header
+              +logo
+          nav._nav: ._layout._960
+            block nav
+              p: code // nav
+          main._main: article._article._layout._960
+            block content
+              h1 !{title}
+              p: code // content for : !{title}
+          footer._footer: ._layout._960
+            block footer
+              p: code // footer
+            p This site is open source. #[+edit_link(path)].
+        ._view: ._layout
+          +theme_switch
+        ._view: ._layout
+          block custom_body
+            +custom_body
