--- a/_pugs/_layouts/mallet.pug
+++ b/_pugs/_layouts/mallet.pug
@@ -39,6 +39,7 @@ block html
             p: code // nav
         main._main: article._article._layoutx._960
           block content
+            h1 !{title}
             p: code // content for : !{title}
         footer._footer: ._layoutx._960
           block footer
