--- a/_pugs/index.html.pug
+++ b/_pugs/index.html.pug
@@ -1,6 +1,9 @@
 extends /_pugs/_layouts/prime
 block append vars
   include /_pugs/_nav
+block nav
+  style.
+    ._nav { display:none !important }
 block footer
   p: small.mono // by #{author} !{year}
 //- --------------------------------------------------------------
