--- a/_scss/_core/core.scss
+++ b/_scss/_core/core.scss
@@ -6,8 +6,11 @@
   left:auto;
   right:6px;
   bottom:auto;
-  padding:.5rem;
-  line-height:0;
+  a {
+    display:inline-block;
+    padding:.5rem;
+    line-height:0;
+  }
 }
 ._credit {
   position:absolute;
