--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -4,11 +4,15 @@
 @use "rouge";
 @use "core";
 // ---------------------------------------------------------------
+._1020 { max-width:1020px; @extend .mc; }
+._960 { max-width:960px; @extend .mc; }
+// ---------------------------------------------------------------
+// fixes
 ._nav,
 ._header,
 ._footer,
 ._main { border:1px solid transparent;margin:.5rem;padding:.5rem }
-._960 { width:960px; @extend .mc; }
+._footer {margin-bottom:3rem}
 // ---------------------------------------------------------------
 ._logo { font-family: 'Arial', system-ui, sans-serif; }
 ._logo { font-weight: 600 }
