--- a/_scss/_core/base.scss
+++ b/_scss/_core/base.scss
@@ -7,7 +7,7 @@ $grey: #888;
 html,body{margin:0}
 body{overflow-y:scroll}
 hr { border: 1px solid $grey }
-h1,h2,h3,h4,h5,h6 { margin-block-start:1.5em;margin-block-end:1rem }
+h1,h2,h3,h4,h5,h6 { margin-block-start:1.5rem;margin-block-end:1rem }
 p,details { margin-block-start:1rem;margin-block-end:1rem }
 pre { padding:.5rem;overflow:auto }
 code,tt { background-color: rgba($grey,.3);padding:0 .25em}
