--- a/_pugs/_layouts/nova.pug
+++ b/_pugs/_layouts/nova.pug
@@ -45,6 +45,6 @@ block html
         footer._footer: ._layoutx._960
           block footer
             p: code // footer
-          p This site is open source. #[+edit_link(path)].
+          p: small This site is open source. #[+edit_link(path)].
       block custom_body
         +custom_body
