--- a/_includes/custom-body.html
+++ b/_includes/custom-body.html
@@ -1,5 +1,6 @@
 <!-- Start custom-body -->
 <!-- Customize with your own _includes/custom-body.html file -->
+{% include copyright.html %}
 {% include credit.html %}
 {% include themejs.html %}
 {% include anchors.html %}
