--- a/_pugs/_layouts/core.pug
+++ b/_pugs/_layouts/core.pug
@@ -42,9 +42,9 @@ block html
           footer._footer: ._layout._960
             block footer
               p: code // footer
-            p This site is open source. #[+edit_link(path)].
+            p: small This site is open source. #[+edit_link(path)].
         ._view: ._layout
           +theme_switch
-        ._view: ._layout
-          block custom_body
-            +custom_body
+      //- ._views
+      block custom_body
+        +custom_body
