--- a/_pugs/_layouts/prime.pug
+++ b/_pugs/_layouts/prime.pug
@@ -47,10 +47,10 @@ block html
             footer._footer: ._layout.footer.border-top.border-gray-light.mt-5.pt-3.text-right.text-gray
               block footer
                 p: code // footer
-              p This site is open source. #[+edit_link(path)].
+              p: small This site is open source. #[+edit_link(path)].
           //- .container-lg
         ._view: ._layout._1020
           +theme_switch
-        ._view: ._layout._1020
-          block custom_body
-            +custom_body
+      //- ._views
+      block custom_body
+        +custom_body
