--- a/_pugs/prime/404.html.pug
+++ b/_pugs/prime/404.html.pug
@@ -5,12 +5,11 @@ block append vars
     title  = `Not found`
     description = `The content you are looking for is not here.`
 block content
-  .flex
+  .flex(style="margin:1rem auto 3rem auto")
     .fit(style="font-size:4rem;padding:.8rem;") 🤷
     .f(style="padding:0 1rem")
       h2 Oops! Nothing found
       p #{ description }
-  div(style="margin-top:3rem")
   +thin_hr
   p
     +back_button.button.text-secondary
