--- a/_scss/_core/core.scss
+++ b/_scss/_core/core.scss
@@ -12,21 +12,33 @@
     line-height:0;
   }
 }
+._copyright,
 ._credit {
   position:absolute;
   position:fixed;
   top:auto;
-  left:auto;
-  right:6px;
   bottom:6px;
 }
+._copyright {
+  right:auto;
+  left:6px;
+}
+._credit {
+  right:6px;
+  left:auto;
+}
+._copyright_text,
 ._credit_link {
   font-family: 'Arial', system-ui, sans-serif !important;
-  font-size: .8rem !important;
-  padding: .2em .4em !important;
-  box-shadow: 0 2px 2px rgba(#000,.5) !important;
-  border-radius: 5px !important;
-  background: #000 !important;
-  color: #fff !important;
+  font-size:12px !important;
+  padding:.5em !important;
+  border-radius:5px !important;
+  background: #fff !important;
+  color:inherit !important;
   text-decoration: none !important;
+  line-height:2 !important;
+}
+._dark{
+  ._copyright_text,
+  ._credit_link { background: #000 !important }
 }
