--- a/_pugs/_layouts/prime.pug
+++ b/_pugs/_layouts/prime.pug
@@ -44,10 +44,10 @@ block html
               block content
                 h1 !{title}
                 p: code // content for : !{title}
-            footer._footer: ._layout.footer.border-top.border-gray-light.mt-5.pt-3.text-right.text-gray
+            footer._footer: ._layout.footer.border-top.border-gray-light.mt-5.pt-3
               block footer
                 p: code // footer
-              p: small This site is open source. #[+edit_link(path)].
+              p.text-right.text-gray: small: +edit_link(path)
           //- .container-lg
         ._view: ._layout._1020
           +theme_switch
