--- a/_pugs/_layouts/main.pug
+++ b/_pugs/_layouts/main.pug
@@ -136,3 +136,28 @@ mixin custom_body
   +themejs
   //- +anchor
   +google_analytics
+
+mixin _bull
+  +l
+  +itext|&bull;
+
+mixin site_nav(sub)
+  - sub_url = [home_url,sub].join('/')+'/'
+  b !{capitalize(sub)}
+  +l
+  +isvg(svgi.angle)
+  +_a(sub_url+"preview.html")| Preview
+  +_a(sub_url+"legacy.html")| Legacy
+  +_bull
+  +_a(sub_url)| Home
+  +_a(sub_url+"page.html")| Page
+  +_a(sub_url+"404.html")| 404
+
+mixin site_footer
+  //- p: code // footer for : !{site_title}
+  p: block site_footer
+    +_a('/')| !{author}
+    +_bull
+    +_a(home_url)| !{site_title}
+
+//- ends
