--- a/_pugs/_layouts/prime.pug
+++ b/_pugs/_layouts/prime.pug
@@ -44,10 +44,12 @@ block html
               block content
                 h1 !{title}
                 p: code // content for : !{title}
-            footer._footer: ._layout.footer.border-top.border-gray-light.mt-5.pt-3
-              block footer
-                p: code // footer
-              p.text-right.text-gray: small: +edit_link(path)
+            footer._footer: ._layout
+              .footer.border-top.border-gray-light.mt-5.pt-3
+                block footer
+                  p: code // footer
+              .border-top.border-gray-light.pt-3
+                p.text-right.text-gray: small: +edit_link(path)
           //- .container-lg
         ._view: ._layout._1020
           +theme_switch
