--- a/_pugs/prime/_html.pug
+++ b/_pugs/prime/_html.pug
@@ -1,7 +1,7 @@
 extends /_pugs/_layouts/prime
-block append vars
-  include /_pugs/_nav
 block append update_vars
   - path  = ['prime',path].join('/')
 block nav
-  +nav_('prime')
+  +site_nav('prime')
+block footer
+  +site_footer
