--- a/_pugs/_layouts/main.pug
+++ b/_pugs/_layouts/main.pug
@@ -157,7 +157,7 @@ mixin site_nav(sub)
 mixin site_footer
   //- p: code // footer for : !{site_title}
   p: block site_footer
-    +_a('https://techiejoe.github.io')| !{author}
+    +_a('https://techie-joe.github.io')| !{author}
     +_bull
     +_a(home_url)| !{site_title}
 
