--- a/_pugs/_layouts/core.pug
+++ b/_pugs/_layouts/core.pug
@@ -42,7 +42,7 @@ block html
           footer._footer: ._layout._960
             block footer
               p: code // footer
-            p.text-right.text-gray: small: +edit_link(path)
+            p.text-right.text-grey: small: +edit_link(path)
         ._view: ._layout
           +theme_switch
       //- ._views
