--- a/_pugs/_layouts/main.pug
+++ b/_pugs/_layouts/main.pug
@@ -154,11 +154,17 @@ mixin site_nav(sub)
   +_a(sub_url+"page.html")| Page
   +_a(sub_url+"404.html")| 404
 
+mixin site_footer_links
+  //- 
+
 mixin site_footer
-  //- p: code // footer for : !{site_title}
-  p: block site_footer
-    +_a('https://techie-joe.github.io')| !{author}
-    +_bull
-    +_a(home_url)| !{site_title}
+  b !{author}'s
+  +l
+  +isvg(svgi.angle)
+  +_a('https://techie-joe.github.io')| Website
+  +_bull
+  +_a('https://github.com/techie-joe')| Profile
+  +_bull
+  +_a(['/nova/site/themejs'].join('/'))| ThemeJs
 
 //- ends
