--- a/_pugs/_layouts/prime.pug
+++ b/_pugs/_layouts/prime.pug
@@ -25,7 +25,7 @@ block html
       meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
       meta#_theme_color(name="theme-color" content=theme_color||'')/
       block style
-        link#_style_prime(rel="stylesheet" href!=`${site_url}/assets/prime/css/style.css?v=${version}`)/
+        link#_style(rel="stylesheet" href!=`${site_url}/assets/prime/css/style.css?v=${version}`)/
       block custom_head
         +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
@@ -44,12 +44,11 @@ block html
               block content
                 h1 !{title}
                 p: code // content for : !{title}
-            footer._footer: ._layout
-              .footer.border-top.border-gray-light.mt-5.pt-3
-                block footer
-                  p: code // footer
-              .border-top.border-gray-light.pt-3
-                p.text-right.text-gray: small: +edit_link(path)
+            footer._footer.footer.mt-5: ._layout.border-top.border-gray-light.pt-3
+              block footer
+                p: code // footer
+                +thin_hr
+              p.text-right.text-grey: small: +edit_link(path)
           //- .container-lg
         ._view: ._layout._1020
           +theme_switch
