--- a/_pugs/nova/_html.pug
+++ b/_pugs/nova/_html.pug
@@ -2,9 +2,4 @@ extends /_pugs/_layouts/nova
 block append update_vars
   - path  = ['nova',path].join('/')
 block nav
-  +site_nav('nova')
-block footer
-  +site_footer
-block append site_footer
-  +_bull
-  b Nova
+  p: +site_nav('nova')
