--- a/_scss/_core/helper.scss
+++ b/_scss/_core/helper.scss
@@ -120,6 +120,10 @@ article {
     &.simple { td, th { border-width:1px 0 } }
     &.borderless { &, td, th { border:0 } }
   }
+  .footnotes {
+    font-size:.9em;
+    li::marker {font-size:.8em}
+  }
 }
 
 .no_u { text-decoration:none !important }
