--- a/_pugs/_layouts/mallet.pug
+++ b/_pugs/_layouts/mallet.pug
@@ -26,23 +26,29 @@ block html
         +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
-      ._views: ._view
-        header._header: ._layoutx
-          block header
-            //- code // header
-            .flex
-              .fill: +logo
-              .fit: +theme_switch
-        nav._nav: ._layoutx._960
-          block nav
-            p: code // nav
-        main._main: article._article._layoutx._960
-          block content
-            h1 !{title}
-            p: code // content for : !{title}
-        footer._footer: ._layoutx._960
-          block footer
-            p: code // footer
-          p.text-right.text-grey: small: +edit_link(path)
+      ._views#app._app.__fadein
+        ._view: ._layoutx._1020
+          #layout.container-lg.px-3.markdown-body
+            #header: #_header-bar: ._flex.my-2: ._flex-main
+              block header
+                //- p: code // header
+                h1#_title._logo: a(href=home_url) #{site_title}
+            nav._nav: ._layout
+              block nav
+                p: code // nav
+            main._main: article._article._layout
+              block content
+                h1 !{title}
+                p: code // content for : !{title}
+            footer#footer._footer.footer.mt-5: ._layout
+              block footer
+                .border-top.border-gray-light.pt-3
+                  p: code // footer
+              .border-top.border-gray-light.pt-3
+                p.text-right.text-grey: small: +edit_link(path)
+          //- .container-lg
+        ._view: ._layoutx._1020
+          +theme_switch
+      //- ._views
       block custom_body
         +custom_body
