--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -1,8 +1,8 @@
 @use "color" as *;
 @use "sass:color";
-@use "_mallet";
-// @use "helper";
+@use "helper";
 @use "core";
+@use "_mallet";
 // ---------------------------------------------------------------
 ._1020 { max-width:1020px; @extend .mc; }
 ._960 { max-width:960px; @extend .mc; }
