--- a/_pugs/_layouts/mallet.pug
+++ b/_pugs/_layouts/mallet.pug
@@ -27,7 +27,7 @@ block html
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
       main#app._app.__fadein
-        #layout.container-lg.px-3.markdown-body
+        #layout.container-lg.px-3.markdown-body._960
           #header: #_header-bar: ._flex.my-2: ._flex-main
             block header
               //- p: code // header
