--- a/_layouts/nova.pug
+++ b/_layouts/nova.pug
@@ -1,16 +1,16 @@
-include main
+include _main
 block vars
   -
-    layout = 'core'
-    htmlClass = ['_core_layout']
+    layout = 'nova'
+    htmlClass = ['_nova_layout']
     bodyClass = []
     mainClass = []
 block update_vars
 block html
   doctype html
   html(lang=lang||'en-US' class=htmlClass.join(' '))
-    |<!-- path   : !{path} -->
-    |<!-- layout : pugs/!{layout} -->
+    |<!-- page.path   : !{path} -->
+    |<!-- page.layout : pugs/!{layout} -->
     head
       meta(charset=charset||'utf-8')/
       |<!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -21,30 +21,28 @@ block html
       meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
       meta#_theme_color(name="theme-color" content=theme_color||'')/
       block style
-        link#_style(rel="stylesheet" href!=`${site_url}/assets/core/css/style.css?v=${version}`)/
+        link#_style(rel="stylesheet" href!=`${site_url}/assets/nova/css/style.css?v=${version}`)/
       block custom_head
         +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
-      ._views
-        ._view: ._layout
-          header._header: ._layout
-            block header
-              //- code // header
-              +logo
-          nav._nav: ._layout._960
-            block nav
-              p: code // nav
-          main._main: article._article._layout._960
-            block content
-              h1 !{title}
-              p: code // content for : !{title}
-          footer._footer: ._layout._960
-            block footer
-              p: code // footer
+      ._views: ._view
+        header._header: ._layoutx
+          block header
+            //- code // header
+            .flex
+              .fill: +logo
+              .fit: +theme_switch
+        nav._nav: ._layoutx._960
+          block nav
+            p: code // nav
+        main._main: article._article._layoutx._960
+          block content
+            h1 !{title}
+            p: code // content for : !{title}
+        footer._footer: ._layoutx._960
+          block footer
+            p: code // footer
             p.text-right.text-grey: small: +edit_link(path)
-        ._view: ._layout
-          +theme_switch
-      //- ._views
       block custom_body
         +custom_body
