--- a/_layouts/core.pug
+++ b/_layouts/core.pug
@@ -1,4 +1,4 @@
-include main
+include _main
 block vars
   -
     layout = 'core'
@@ -9,8 +9,8 @@ block update_vars
 block html
   doctype html
   html(lang=lang||'en-US' class=htmlClass.join(' '))
-    |<!-- page.path   : !{path} -->
-    |<!-- page.layout : pugs/!{layout} -->
+    |<!-- path   : !{path} -->
+    |<!-- layout : pugs/!{layout} -->
     head
       meta(charset=charset||'utf-8')/
       |<!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -21,30 +21,30 @@ block html
       meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
       meta#_theme_color(name="theme-color" content=theme_color||'')/
       block style
-        link#_style(rel="stylesheet" href!=`${site_url}/assets/mallet/css/style.css?v=${version}`)/
+        link#_style(rel="stylesheet" href!=`${site_url}/assets/core/css/style.css?v=${version}`)/
       block custom_head
         +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
-      main#app._app.__fadein
-        #layout.container-lg.px-3.markdown-body
-          #header: #_header-bar: ._flex.my-2: ._flex-main
+      ._views
+        ._view: ._layout
+          header._header: ._layout
             block header
-              //- p: code // header
-              h1#_title._logo: a(href=home_url) #{site_title}
-          nav._nav
+              //- code // header
+              +logo
+          nav._nav: ._layout._960
             block nav
               p: code // nav
-          article._article
+          main._main: article._article._layout._960
             block content
               h1 !{title}
               p: code // content for : !{title}
-          footer#footer
+          footer._footer: ._layout._960
             block footer
               p: code // footer
-              hr/
-            p.text-right.text-grey: small: +edit_link(path)
-        //- .container-lg
-        +theme_switch
+              p.text-right.text-grey: small: +edit_link(path)
+        ._view: ._layout
+          +theme_switch
+      //- ._views
       block custom_body
         +custom_body
