--- a/_scss/core/css/style.scss
+++ b/_scss/core/css/style.scss
@@ -2,7 +2,7 @@
 @use "base";
 @use "rouge";
 @use "helper";
-@use "core";
+@use "dove";
 // ---------------------------------------------------------------
 ._1020 { max-width:1020px; @extend .mc; }
 ._960 { max-width:960px; @extend .mc; }
