--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -1,4 +1,4 @@
-extends /_pugs/_layouts/mallet
+extends /_layouts/mallet
 block append update_vars
   - path  = ['mallet',path].join('/')
 block nav
